--- a/src/app/modules/admin/components/user-management/user-management.component.html
+++ b/src/app/modules/admin/components/user-management/user-management.component.html
@@ -28,9 +28,8 @@
       <thead>
         <tr>
           <th>ID</th>
-          <th>Username</th>
-          <th>Email</th>
           <th>Name</th>
+          <th>Email</th>
           <th>Roles</th>
           <th>Created</th>
           <th>Actions</th>
@@ -39,12 +38,11 @@
       <tbody>
         <tr *ngFor="let user of users">
           <td>{{ user.id }}</td>
-          <td>{{ user.username }}</td>
+          <td>{{ user.fullName }}</td>
           <td>{{ user.email }}</td>
-          <td>{{ user.firstName }} {{ user.lastName }}</td>
           <td>
             <span *ngFor="let role of user.roles" class="role-badge">
-              {{ role.name }}
+              {{ role }}
             </span>
           </td>
           <td>{{ user.createdAt | date:'medium' }}</td>
