--- a/src/app/modules/activities/components/activity-list/activity-list.component.html
+++ b/src/app/modules/activities/components/activity-list/activity-list.component.html
@@ -63,6 +63,18 @@
         <div class="activity-category-badge">
           {{ activity.category }}
         </div>
+        <!-- Edit Icon - Only show for presidents -->
+        <button 
+          *ngIf="isCurrentUserPresident(activity)" 
+          class="edit-activity-btn" 
+          (click)="editActivity(activity, $event)"
+          title="Edit Activity"
+        >
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+            <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+          </svg>
+        </button>
       </div>
       
       <!-- Content Section -->
@@ -117,3 +129,12 @@
   (activityCreated)="onActivityCreated()"
   (dialogClosed)="closeCreateDialog()">
 </app-activity-create>
+
+<!-- Edit Activity Dialog -->
+<app-edit-activity-dialog 
+  *ngIf="showEditDialog"
+  [activity]="selectedActivity"
+  [isVisible]="showEditDialog"
+  (close)="closeEditDialog()"
+  (save)="saveActivity($event)">
+</app-edit-activity-dialog>
