--- a/src/app/modules/students/components/student-profile/student-profile.html
+++ b/src/app/modules/students/components/student-profile/student-profile.html
@@ -29,7 +29,19 @@
           </div>
           
           <div class="profile-basic-info">
-            <h1>{{ student.fullName }}</h1>
+            <div class="profile-header">
+              <h1>{{ student.fullName }}</h1>
+              <!-- Edit Icon for Current User Profile -->
+              <button class="edit-profile-btn" 
+                      *ngIf="isCurrentUserProfile"
+                      (click)="openEditDialog(student)"
+                      title="Edit profile">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                  <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                </svg>
+              </button>
+            </div>
             <p class="student-email">{{ student.email }}</p>
             <div class="profile-badges">
               <span class="badge grade" *ngIf="student.grade">{{ student.grade }}</span>
@@ -120,3 +132,11 @@
       </div>
     </ng-container>
   </div>
+
+  <!-- Edit Profile Dialog -->
+  <app-edit-profile-dialog
+    [isVisible]="showEditDialog"
+    [userData]="currentUserData"
+    (close)="closeEditDialog()"
+    (profileUpdated)="onProfileUpdated()"
+  ></app-edit-profile-dialog>
