--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -52,7 +52,7 @@
           </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="margin-top: 1.5rem;">
           <label for="email">Email Address</label>
           <input
             type="email"
