--- a/src/app/modules/auth/components/verify-otp/verify-otp.component.css
+++ b/src/app/modules/auth/components/verify-otp/verify-otp.component.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80');
+  background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20231219/pngtree-simple-geometric-fluid-purple-gradient-e-commerce-event-poster-background-image_15520153.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
